test_case/rust-lang_rust/82583_787099858.rs
rust
fn main() {
    мир; // error: cannot find value `мир` in this scope; non-ascii idents are not fully supported
    ♥; // error: unknown start of token: \u{2665}
}
